# warden

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deliverables/: warden-architecture.tex  warden-fundamentos.tex  warden-style.sty  warden-vision.tex
docs/: README.md  architecture.md  conventions.md  data-flow.md  lab-setup.md  presentacion-canva.md  threat-model.md  use-cases.md
docs/adr/: 0001-air-only-comms.md  0002-python-scapy-detector.md  0003-esp32-offensive.md  0004-no-ml-heuristics.md  0005-external-config.md  0006-ethical-validator-in-firmware.md  0007-hybrid-attacker-panel.md  0008-fastapi-websockets.md  0009-oui-flash-embedded.md  README.md
docs/api/: detector-fastapi.md  esp32-rest.md
docs/internal/: BUILD_PROCEDURE.md  CANONICAL_API.md  CONSTANTS.md  FIRMWARE_RUNTIME.md  GLOSSARY.md  HARDWARE_BRINGUP.md  PCAP_GENERATION.md  TRACEABILITY.md  USECASE_SCRIPTS.md  UTILS_REGISTRY.md
docs/latex/: warden-design.tex  warden-laboratorio.tex  warden-srs.tex  warden-threat-model.tex  warden-use-cases.tex
docs/modules/: attacker-firmware.md  attacker-panel.md  defender-panel.md  detector.md  ethical-validator.md
reports/: template.md
scripts/: check-cpp-helpers.sh  demo-uc12.sh  generate-fixtures.py  generate-oui-db.py  setup-monitor-mode.sh
src/attacker/: README.md  api_server.cpp  api_server.h  attacker.ino  beacon_flood.cpp  beacon_flood.h  chain_controller.cpp  chain_controller.h  config.cpp  config.h  control_ap.cpp  control_ap.h  deauth_module.cpp  deauth_module.h  ethical_validator.cpp  ethical_validator.h  evil_twin.cpp  evil_twin.h  frame_builder.cpp  frame_builder.h  oui_database.h  oui_lookup.cpp  oui_lookup.h  recon.cpp  recon.h  serial_interface.cpp  serial_interface.h
src/attacker-panel/: README.md  index.html
src/detector/: README.md  config.py  correlator.py  dispatcher.py  main.py  reporter.py  session.py
src/ethical_validator/: CMakeLists.txt  README.md
src/ethical_validator/src/: ethical_validator.cpp
src/ethical_validator/tests/: test_frame_builder.cpp  test_validator.cpp
tests/: conftest.py  test_acceptance_chain.py  test_no_duplicate_helpers.py
tests/detector/: test_config.py  test_correlator.py  test_dispatcher.py  test_live_capture_smoke.py  test_live_parity.py  test_main_pcap.py  test_pcap_capture.py  test_reporter.py  test_session.py
tools/mock-esp32/: server.py
(+46 files in other folders)
