[project]
name = "warden-detector"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "scapy==2.5.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "websockets==12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
strict = true
files = ["src/detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
