cmake_minimum_required(VERSION 3.16)
project(warden_ethical_validator CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(ethical_validator STATIC src/ethical_validator.cpp)
target_include_directories(ethical_validator PUBLIC include)
enable_testing()
add_executable(test_validator tests/test_validator.cpp)
target_link_libraries(test_validator ethical_validator)
target_include_directories(test_validator PRIVATE third_party)
add_test(NAME validator COMMAND test_validator)

add_executable(test_frame_builder tests/test_frame_builder.cpp)
target_include_directories(test_frame_builder PRIVATE third_party)
add_test(NAME frame_builder COMMAND test_frame_builder)
